# adoutility

./: .gitignore  BuildPackage.zsh  README.md  RunTests.bat  RunTests.zsh  mypy.ini  requirements.txt  setup.cfg  setup.py
src/adoutility/: __init__.py  dummy.py
src/adoutility/tests/: __init__.py  test_dummy.py
