[metadata]
name = adoutility
version = attr: src.adoutility.__version__
author = Jonathan DeCarlo
author-email = everythingiwanted.sortof@gmail.com
home-page = https://github.com/jddecarlo/adoutility
description = A helpful utility package for working with Azure DevOps.
long_description = file: README.md, LICENSE
description-file = README.md
license = MIT
license-file = LICENSE
platform = any
url = https://github.com/jddecarlo/adoutility
#download_url = https://github.com/jddecarlo/adoutility/releases/download/v0.0.1/adoutility-0.0.1-py3-none-any.whl
keywords = 
    Python
    Library
    DevOps
    ADO
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10

[options]
zip_safe = true
include_package_data = true
python_requires = 
    >= 3.10.*
package_dir=
    = src
packages = find:
setup_requires =
    setuptools
	# setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
# install_requires =     
[options.packages.find]
where = src

[bdist_wheel]
universal = false
